--- a/starter/app/src/main/AndroidManifest.xml
+++ b/starter/app/src/main/AndroidManifest.xml
@@ -25,9 +25,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".locationreminders.ReminderDescriptionActivity"
-            android:exported="false"
-            ></activity>
+        <activity
+            android:name=".locationreminders.ReminderDescriptionActivity"
+            android:exported="false"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -40,19 +40,19 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".authentication.AuthenticationActivity"
-            android:exported="false">
-        </activity>
-        <activity android:name=".locationreminders.RemindersActivity"
-            android:exported="true"
-            >
+        <activity
+            android:name=".authentication.AuthenticationActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity
+            android:name=".locationreminders.RemindersActivity"
+            android:exported="true"></activity>
+
         <receiver
             android:name=".locationreminders.geofence.GeofenceBroadcastReceiver"
             android:enabled="true"
