--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -50,14 +50,14 @@ ext {
     recyclerViewVersion = '1.2.1'
     mockitoVersion = '2.8.9'
     constraintVersion = '2.0.0-rc1'
-    dexMakerVersion = '2.12.1'
-    coroutinesVersion = '1.2.1'
+    dexMakerVersion = '2.28.3'
+    coroutinesVersion = '1.6.4'
     roomVersion = '2.4.3'
     koinVersion = '2.0.1'
-    truthVersion = '0.44'
+    truthVersion = '1.1.3'
     junitVersion = '4.12'
     androidXTestCoreVersion = '1.5.0-rc01'
-    robolectricVersion = '4.3-beta-1'
+    robolectricVersion = '4.9'
     androidXTestExtKotlinRunnerVersion = '1.1.3'
     archTestingVersion = '2.1.0'
     playServicesVersion = '21.0.0'
